# models/contacts.js
@@ -1,13 +1,13 @@
-﻿module.exports = (mongoose) => {
-  return mongoose.model(
-    "contact",
-    mongoose.Schema({
-      firstName: String,
-      lastName: String,
-      email: String,
-      favoriteColor: String,
-      birthday: String,
-    }),
-    "Contacts",
-  );
+﻿const mongoose = require("mongoose");
+const Schema = mongoose.Schema;
+
+const contactSchema = new Schema({
+  firstName: String,
+  lastName: String,
+  email: String,
+  favoriteColor: String,
+  birthday: String,
+});
+module.exports = (mongoose) => {
+  return mongoose.model("contact", contactSchema, "Contacts");
 };
